# contract_patterns

./: README.md  SConstruct  contract-patterns.md  pyproject.toml
clvm_contracts/: allow_everything.cl  composite_amount_validation.cl  composite_amount_validation.py  rate_limit_validation.cl  rate_limit_validation.py  validating_meta_puzzle.cl  validating_meta_puzzle.py
tests/: test_validating_meta_puzzle.py
